--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -8,7 +8,7 @@
 		</header>
 	</div>
 </section>
-<article class="page type-page status-publish hentry">
+<article>
 	<section class="section black-white section-normal has-top">
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -30,7 +30,7 @@
 											</div>
 											<div class="post-head small-screen-center">
 												<h2 class="post-title"><a href="<%= blog.content %>"><%= blog.title %></a></h2>
-												<small class="post-author"><%= blog.author %></small>
+												<small class="post-author"><%= blog.author.name %></small>
 												<small class="post-date"><%= blog.date %></small>
 												<div class="post-icon">
 													<div class="hex-alt-big-white">
