--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -153,33 +153,27 @@
 
 /* RWD for blog */
 @media (max-width: 979px) {
-    .post-showinfo .post-head, .post-showinfo .post-body, .post-showinfo .post-extras, .post-showinfo .comments-head, .post-showinfo .comments-body, .post-showinfo .post-navigation, .grid-post .post-showinfo .post-head, .grid-post .post-showinfo .post-body, .grid-post .post-showinfo .post-extras, .grid-post .post-showinfo .comments-head, .grid-post .post-showinfo .comments-body, .grid-post .post-showinfo .post-navigation {
-    margin-left: 0;
-}
-.post-showinfo .comments-head, .grid-post .post-showinfo .comments-head {
-    border-top: 30px solid transparent;
-}
-.post-showinfo .post-media, .grid-post .post-showinfo .post-media {
-    margin-bottom: 0;
-}
-.post-showinfo .post-head, .post-showinfo .comments-head, .grid-post .post-showinfo .post-head, .grid-post .post-showinfo .comments-head {
-    padding-top: 30px;
-    z-index: 2;
-}
-.post-showinfo .post-icon, .grid-post .post-showinfo .post-icon {
-    top: -20px;
-    left: 50%;
-    margin-left: -20px;
-    margin-right: 0;
-    z-index: 100;
-}
-.post-showinfo .post-icon i, .grid-post .post-showinfo .post-icon i {
-    line-height: 20px;
-    font-size: 12px;
-}
-.media-inner .comments-form .comments-head {
-    margin-top: 12px;
-    padding-top: 0;
-    border-top: 0;
-}
+    .grid-post {
+        .post-showinfo {
+            .post-head,
+            .post-body,
+            .post-extras {
+                margin-left: 0;
+            }
+            .post-head {
+                padding-top: 30px;
+                z-index: 2;
+            }
+            .post-media {
+                margin-bottom: 0;
+            }
+            .post-icon {
+                top: -20px;
+                left: 50%;
+                margin-left: -20px;
+                margin-right: 0;
+                z-index: 100;
+            }
+        }
+    }
 }
