--- a/public/stylesheets/blogPost.less
+++ b/public/stylesheets/blogPost.less
@@ -1,17 +1,22 @@
 .blog-post {
 	header {
 		&.section-header {
+			opacity: 0.9;
 			p {
 				color: #fff;
+				&.author {
+					font-size: 18px;
+				}
 				&.date {
-					font-size: 10px;
+					font-size: 12px;
 					margin: 2px 0 0 0;
 				}
 			}
 		}
 	}
 	.blog-title {
-		text-align    : center;
+		text-align    : left;
+		font-size: 56px;
 		display       : inline-block;
 		border-bottom : 0;
 		position      : relative;
@@ -19,4 +24,60 @@
 		line-height: 1em;
 		color: #fff;
 	}
+	.blog-content {
+		letter-spacing: 0.01rem;
+		font-weight: 400;
+		font-style: normal;
+		font-size: 18px;
+		line-height: 1.5;
+		text-rendering: optimizeLegibility;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+		color : rgba(0,0,0,0.8);
+		margin-bottom: 60px;
+		img {
+		  padding: 25px 0;
+	      width: 100%;
+	      height: auto;
+   		}
+	}
+	.footer {
+		border-top: 1px solid rgba(0,0,0,0.15);
+		background: @light-font;
+		color: @dark-font;
+		padding-top: 45px;
+		.author {
+			font-size: 18px;
+			font-weight:600;
+		}
+		.bio {
+			font-size: 14px;
+			font-weight: 400;
+		}
+	}
+}
+
+@media screen and (max-width: 1024px) { /* Specific to this particular image */
+  .blog-post {
+  	[class*="col-"] {
+		padding-left: 30px;
+		padding-right: 30px;
+	}
+  	.section {
+	  	&.section-xlarge {
+	  		padding: 120px 0 60px 0;
+	  	}
+	  	.blog-title {
+	  		font-size: 40px;
+	  	}
+	}
+  	.page {
+  		.section-normal {
+  			padding: 45px 0;
+  		}
+  		.footer {
+  			text-align: center;
+  		}
+  	}
+  }
 }
