Added content on home page

--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -78,6 +78,9 @@
       margin         : 0 auto 80px;
       z-index        : 3;
       font-size      : 18px;
+      &.small {
+        margin: 0 auto 15px;
+      }
       &.blog {
         margin: 0 auto;
       }
