--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,14 +16,14 @@
 	</div>
 </section>
 <article>
-	<section class="section black-white section-normal has-top">
+	<section class="section black-white section-short has-top">
 		<div class="decor-top">
-			<% include topangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
-			<header class="section-header text-center underline">
+			<header class="section-header small text-center underline">
 				<h1 class="headline text-large hairline xsmall-margin-bottom">How It Works</h1>
 			</header>
 			<div class="row med-margin-bottom">
@@ -31,25 +31,81 @@
 					<ul class="list-unstyled row image-list">
 						<li class="col-md-4">
 							<img src="/images/icon-cogs.png" width="200" height="200">
-							<h3 class="text-center">Create</h3>
+							<h3 class="text-center font-normal">Create your product roadmap in minutes</h3>
 						</li>
 						<li class="col-md-4">
 							<img src="/images/icon-composer.png" width="200" height="200">
-							<h3 class="text-center">Design</h3>
+							<h3 class="text-center font-normal">Colorize And Stylize To Match Your Brand</h3>
 						</li>
 						<li class="col-md-4">
 							<!-- roadmap1 is better proportioned but 2 looks better? -->
 							<img src="/images/icon-imac-roadmap2.png" width="200" height="200">
-							<h3 class="text-center">Share</h3>
+							<h3 class="text-center font-normal">Download Your Presentation Ready Roadmap</h3>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="section white-black section-normal has-top">
+	<section class="section white-black section-short has-top">
 		<div class="decor-top">
-			<% include bottomangle %>
+			<% include top-triangle-angle %>
+		</div>
+		<div class="background-media"></div>
+		<div class="background-overlay"></div>
+		<div class="container">
+			<header class="section-header small text-center underline">
+				<h1 class="headline text-large hairline xsmall-margin-bottom">Features</h1>
+			</header>
+			<div class="row med-margin-bottom">
+				<div class="col-md-12 text-default">
+					<ul class="list-unstyled row image-list">
+						<li class="col-md-12 small-margin-top">
+							<div class="col-md-4">
+								<img src="/images/icon-briefcase-full.png" width="300" height="300">
+							</div>
+							<div class="col-md-8">
+								<h3 class="text-center font-normal">Idea Management</h3>
+								<p>Import, create and priortize items in a slick UI.</p>
+							</div>
+						</li>
+						<li class="col-md-12 small-margin-top">
+							<div class="col-md-8">
+								<h3 class="text-center font-normal">Custom Roadmap Views</h3>
+								<p>Single click creation and powerful drag and drop tools.</p>
+							</div>
+							<div class="col-md-4">
+								<img src="/images/icon-camera.png" width="300" height="300">
+							</div>
+						</li>
+						<li class="col-md-12 small-margin-top">
+							<!-- roadmap1 is better proportioned but 2 looks better? -->
+							<div class="col-md-4">
+								<img src="/images/icon-apple.png" width="300" height="300">
+							</div>
+							<div class="col-md-8">
+								<h3 class="text-center font-normal">Color Palettes &#38; Branding</h3>
+								<p>Create the deep impact on your audience.</p>
+							</div>
+						</li>
+						<li class="col-md-12 small-margin-top">
+							<!-- roadmap1 is better proportioned but 2 looks better? -->
+							<div class="col-md-8">
+								<h3 class="text-center font-normal">Fit to Powerpoint</h3>
+								<p>Stop moving pixels arounds a slide. Export directly to Powerpoint.</p>
+							</div>
+							<div class="col-md-4">
+								<img src="/images/icon-disk.png" width="300" height="300">
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section black-white section-normal has-top">
+		<div class="decor-top">
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -84,9 +140,9 @@
 			</div>
 		</div>
 	</section>
-	<section class="section black-white section-short has-top">
+	<!--<section class="section white-black section-short has-top">
 		<div class="decor-top">
-			<% include topangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -113,10 +169,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	<section class="section white-black section-normal has-top">
 		<div class="decor-top">
-			<% include bottomangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -176,7 +232,7 @@
 	</section>
 	<section class="section black-white section-normal has-top">
 		<div class="decor-top">
-			<% include topangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
