--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -84,6 +84,10 @@ body {
     margin-top: -30px !important;
 }
 
+.font-normal {
+    font-weight: 400 !important;
+}
+
 /* Are these styles just used on home? */
 .box-list>li {
     overflow: hidden;
@@ -133,33 +137,6 @@ a:link {
     position: absolute;
 }
 
-.underline {
-    &:before {
-      opacity          : 1;
-      content          : "";
-      position         : absolute;
-      left             : 20px;
-      right            : 20px;
-      height           : 2px;
-      margin           : 0 auto;
-      width            : 100%;
-      bottom           : -15%;
-    }
-    &.underline-left {
-      &:before {
-        margin: 0;
-        width: 40%;
-        left: 0;
-        bottom : -35px;
-      }
-    }
-    &.underline-404 {
-      &:before {
-        bottom: -20px;
-      }
-    }
-}
-
 //Other button
 .btn, button {
     outline: 0;
@@ -177,6 +154,34 @@ a:link {
     }
     span {
         font-size: 14px;
+    }
+}
+
+
+.underline {
+    &:before {
+      opacity          : 1;
+      content          : "";
+      position         : absolute;
+      left             : 20px;
+      right            : 20px;
+      height           : 2px;
+      margin           : 0 auto;
+      width            : 25%;
+      bottom           : -15%;
+    }
+    &.underline-left {
+      &:before {
+        margin: 0;
+        width: 40%;
+        left: 0;
+        bottom : -35px;
+      }
+    }
+    &.underline-404 {
+      &:before {
+        bottom: -20px;
+      }
     }
 }
 
