Added how to add a blog post to the README

--- a/public/stylesheets/termsAndConditions.less
+++ b/public/stylesheets/termsAndConditions.less
@@ -27,6 +27,13 @@
 		}
 	}
 
+	a {
+		color: @roadmunk-orange;
+		&:hover {
+			color: @light-orange;
+		}
+	}
+
 	.indent {
 		width: 95%;
 		margin-left: 40px;
