--- a/views/features.ejs
+++ b/views/features.ejs
@@ -21,7 +21,7 @@
 	</section>
 	<section class="section white-black section-normal has-top">
 		<div class="decor-top">
-			<% include topangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -41,7 +41,7 @@
 	</section>
 	<section class="section black-white section-normal has-top">
 		<div class="decor-top">
-			<% include bottomangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -61,7 +61,7 @@
 	</section>
 	<section class="section white-black section-normal has-top">
 		<div class="decor-top">
-			<% include topangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -81,7 +81,7 @@
 	</section>
 	<section class="section black-white section-normal has-top">
 		<div class="decor-top">
-			<% include bottomangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -101,7 +101,7 @@
 	</section>
 	<section class="section white-black section-normal has-top">
 		<div class="decor-top">
-			<% include topangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
@@ -121,7 +121,7 @@
 	</section>
 	<section class="section black-white section-normal has-top">
 		<div class="decor-top">
-			<% include bottomangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
