--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -23,7 +23,7 @@
 	</section>
 	<section class="section white-black section-normal has-top">
 		<div class="decor-top">
-			<% include topangle %>
+			<% include top-triangle-angle %>
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
