--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -75,7 +75,7 @@
 
 	<p class="col2 top"><strong>Fees</strong></p>
 
-	<p class="col2 bottom">All Fees will be due on such dates and for such amounts as indicated in an invoice prepared by Roadmunk and provided to the Customer in advance. Unless otherwise indicated, all Fees are quoted in Canadian dollars and are non-refundable, except as may otherwise be provided in this Agreement.</p>
+	<p class="col2 bottom">All Fees will be due on such dates and for such amounts as indicated in an invoice prepared by Roadmunk and provided to the Customer in advance. Unless otherwise indicated, all Fees are quoted in US dollars and are non-refundable, except as may otherwise be provided in this Agreement.</p>
 
 	<h4 class="col1">4.2</h4>
 
@@ -87,7 +87,7 @@
 
 	<p class="col2 top"><strong>Changes in Fees</strong></p>
 
-	<p class="col2 bottom">Roadmunk may, from time to time in its sole discretion, change prices or terms and conditions and will post all such changes on its website at www.Roadmunk.com and on the Roadmunk Web Application.</p>
+	<p class="col2 bottom">Roadmunk may, from time to time in its sole discretion, change prices or terms and conditions and will post all such changes on its website at <a href="http://roadmunk.com">www.Roadmunk.com</a> and on the Roadmunk Web Application.</p>
 
 	<h4 class="col1">4.4</h4>
 
