--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -15,7 +15,7 @@
 
 	<h4 class="col1">1.2 </h4>
 
-	<p class="col2"><strong>“Business Day”</strong> means Monday, Tuesday, Wednesday, Thursday, or Friday, except for those days which fall on a Canadian and US holidays</p>
+	<p class="col2"><strong>“Business Day”</strong> means Monday, Tuesday, Wednesday, Thursday, or Friday, except for those days which fall on a Mexico and US holidays</p>
 
 	<h4 class="col1">1.3 </h4>
 
