Added Privacy and Security Policy

--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -1,6 +1,8 @@
 
 body {
   font-family:  'OpenSans', "Helvetica Neue", Helvetica, Arial;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .text-left {
@@ -174,6 +176,7 @@ a:link {
       &:before {
         margin: 0;
         width: 40%;
+        height: 1px;
         left: 0;
         bottom : -35px;
       }
