--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -44,13 +44,24 @@
 											</div>
 											<div class="post-extras bordered">
 												<span class="post-category">
-													<span class="glyphicon glyphicon-home"></span>
+													<a href="#">
+														<span class="icon-facebook"></span>
+													</a>
 												</span>
 												<span class="post-tags">
-													<span class="glyphicon glyphicon-home"></span>
+													<a href="#">
+														<span class="icon-twitter"></span>
+													</a>
 												</span>
 												<span class="post-link">
-													<span class="glyphicon glyphicon-home"></span>
+													<a href="#">
+														<span class="icon-linkedin"></span>
+													</a>
+												</span>
+												<span class="post-link">
+													<a href="#">
+														<span class="icon-googleplus"></span>
+													</a>
 												</span>
 											</div>
 										</article>
