--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -4,17 +4,17 @@
 			<h4>About Roadmunk</h4>
 			<ol>
 				<li class="nav-item">
-					<a href="/blog" title="Link">
+					<a href="/blog" title="Blog">
 						Blog
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="https://twitter.com/RoadmunkApp" title="Link">
+					<a href="https://twitter.com/RoadmunkApp" title="Twitter">
 						Twitter
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="#" title="Contact Us">
 						Contact Us
 					</a>
 				</li>
@@ -24,17 +24,17 @@
 			<h4>Resources</h4>
 			<ol>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="/pricing" title="Pricing">
 						Pricing
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="#" title="FAQ">
 						FAQ
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/termsandconditions" title="Link">
+					<a href="/termsandconditions" title="Terms And Conditions">
 						Terms and Conditions
 					</a>
 				</li>
@@ -44,17 +44,17 @@
 			<h4>Helpful Links</h4>
 			<ol>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="http://roadmunk.uservoice.com/" title="Help">
 						Roadmunk Help
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="/security" title="Security">
 						Security
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="/privacypolicy" title="Privacy Policy">
 						Privacy Policy
 					</a>
 				</li>
@@ -64,17 +64,17 @@
 			<h4>Social</h4>
 			<ol>
 				<li class="nav-item">
-					<a href="https://twitter.com/RoadmunkApp" title="Link">
+					<a href="https://twitter.com/RoadmunkApp" title="Twitter">
 						Twitter
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="#" title="Facebook">
 						Facebook
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Link">
+					<a href="#" title="Linked In">
 						Linked In
 					</a>
 				</li>
@@ -85,8 +85,8 @@
 		<div class="info-left">
 			&#169;2012&#45;2014 Roadmunk
 			&nbsp;&#183;&nbsp;
-			<a href="#" title="Terms of Service">
-				Terms of Service
+			<a href="/termsandconditions" title="Terms And Conditions">
+				Terms And Conditions
 			</a>
 			&nbsp;&#183;&nbsp;
 			<a href="#" title="Privacy Policy">
@@ -98,7 +98,7 @@
 			</a>
 		</div>
 		<div class="info-right">
-			<a href="#contactpage" title="Support">support&#64;roadmunk.com</a>
+			<a href="mailto:support@roadmunk.com?Subject=Support%20Case" title="Support">support&#64;roadmunk.com</a>
 		</div>
 	</div>
 </footer>
