--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -87,7 +87,7 @@
 
 	<p class="col2 top"><strong>Changes in Fees</strong></p>
 
-	<p class="col2 bottom">Roadmunk may, from time to time in its sole discretion, change prices or terms and conditions and will post all such changes on its website at <a href="http://roadmunk.com">www.Roadmunk.com</a> and on the Roadmunk Web Application.</p>
+	<p class="col2 bottom">Roadmunk may, from time to time in its sole discretion, change prices or terms and conditions and will post all such changes on its website at <a href="http://roadmunk.com/pricing">www.roadmunk.com/pricing</a> and on the Roadmunk Web Application.</p>
 
 	<h4 class="col1">4.4</h4>
 
