--- a/public/stylesheets/fonts.css
+++ b/public/stylesheets/fonts.css
@@ -147,3 +147,42 @@
     font-style: italic;
 
 }*/
+
+/* IcoMoon Fonts */
+@font-face {
+    font-family: 'icomoon';
+    src:url('/fonts/icomoon.eot?jfvhys');
+    src:url('/fonts/icomoon.eot?#iefixjfvhys') format('embedded-opentype'),
+        url('/fonts/icomoon.woff?jfvhys') format('woff'),
+        url('/fonts/icomoon.ttf?jfvhys') format('truetype'),
+        url('/fonts/icomoon.svg?jfvhys#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    font-family: 'icomoon';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-twitter:before {
+    content: "\e600";
+}
+.icon-facebook:before {
+    content: "\e601";
+}
+.icon-googleplus:before {
+    content: "\e602";
+}
+.icon-linkedin:before {
+    content: "\e603";
+}
