--- a/public/stylesheets/termsAndConditions.less
+++ b/public/stylesheets/termsAndConditions.less
@@ -1,12 +1,17 @@
-@seperator-color   : @steel-line;
-@thin			   : 300;
+@plain-font-color : @dark-font;
+@seperator-color  : @steel-line;
+@thin             : 300;
 
 .conditions-box {
-	color: @light-font;
+	color: @plain-font-color;
 	display: block;
 	width: 1000px;
 	margin: 20px auto 20px auto;
 	text-align: left;
+
+	strong {
+		font-weight: 600;
+	}
 
 	h1, h2, h3, h4, h5, h6 {
 		color: @steel-light;
@@ -30,7 +35,7 @@
 	a {
 		color: @roadmunk-orange;
 		&:hover {
-			color: @light-orange;
+			color: @dark-orange;
 		}
 	}
 
