--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -1,5 +1,5 @@
 <article>
-	<section class="section black-white section-large top-header has-top">
+	<section class="section white-black section-large top-header has-top">
 		<div class="decor-top">
 			<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
 				<path d="M0 0 L100 100 L0 100" stroke-width="0"></path>
@@ -21,7 +21,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section white-black section-normal has-top">
+	<section class="section black-white section-normal has-top">
 		<div class="decor-top">
 			<% include top-triangle-angle %>
 		</div>
