--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -14,7 +14,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" title="Contact Us">
+					<a href="/company" title="Contact Us">
 						Contact Us
 					</a>
 				</li>
