--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,9 @@
 		<link rel='stylesheet' href='/stylesheets/fonts.css' />
 		<link rel='stylesheet' href='/stylesheets/animate.css' />
 		<link rel='stylesheet' href='/stylesheets/style.css' />
+		
+		<!-- Custom GMaps Styling -->
+		<link rel='stylesheet' href='/vendor/customGmaps/css/style.css' />
 
 		<!-- Add something here so you can include specific stylesheet -->
 
