--- a/views/terms.ejs
+++ b/views/terms.ejs
@@ -3,6 +3,8 @@
 		<div class="tnc-title">Terms and Conditions</div>
 	</div>
 
+	<h2>LAST MODIFIED: JULY 8, 2014</h2>
+
 	<p>In connection with the use of the online web application and related systems (<strong>“Roadmunk Web Application”</strong>) and the provision of any related support (<strong>“Support”</strong>) by Roadmunk, Inc. (<strong>“Roadmunk”</strong> or the <strong>“Company”</strong>) you and/or your organization (the “Customer” and together with Roadmunk, the <strong>“Parties”</strong>) hereby agree to the following terms, conditions, notices and applicable attachments contained herein (the <strong>“Agreement”</strong>):</p>
 
 	<p>By accepting this agreement, either by: a) clicking an on-line box indicating your acceptance, b) signing a service level agreement which references this agreement (or an attachment to this agreement), or c) using, installing, or activating the Roadmunk Web Application after being made aware of these general terms and conditions, you agree to the terms, conditions and notices contained herein. If you are entering into this agreement on behalf of a company or other legal entity you represent that you have the authority to bind such entity and its affiliates to this agreement. You may not enter into this agreement and/or access the online data platform if you are a competitor of Roadmunk or any of its affiliates.</p>
