--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,6 +18,7 @@
         <li><a href="/features">Features</a></li>
         <li><a href="/pricing">Pricing</a></li>
         <li><a href="/blog">Blog</a></li>
+        <li><a href="/company">Company</a></li>
         <li><a href="https://app.roadmunk.com/login/#/">Sign In</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
