--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -1,5 +1,12 @@
 <script src="/vendor/jquery/dist/jquery.js"></script>
 <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+
+<% if (content == "company") { %>
+	<script src="/vendor/customGmaps/js/modernizr.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ81ILn9i65wubHrnCJR2q5iIV6k7b4LA"></script>
+	<script src="/vendor/customGmaps/js/main.js"></script>
+<% } %>
+
 <script src="/javascripts/main.js"></script>
 <%if (content == "features") { %>
 	<script src="/javascripts/features.js"></script>
