--- a/views/features.ejs
+++ b/views/features.ejs
@@ -8,8 +8,8 @@
 			</header>
 			<div class="row">
 				<div class="col-lg-12 image-row">
-					<img src="http://placehold.it/500x300">
-					<img src="http://placehold.it/500x300">
+					<img src="/images/timeline.png">
+					<img src="/images/swimlane.png">
 				</div>
 			</div>
 			<div class="row">
@@ -27,22 +27,22 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div id="feature_1_text" class="col-md-6 transparent">
+				<div id="feature_1_text" class="col-md-4 transparent">
 					<header class="small-header text-left">
 						<h1 class="headline text-small hairline">Designer Colors</h1>
 						<p class="body-subheader">Colorize your roadmap from our selection of palettes or create your own palette to match your brand to give the deepest impact to your audience. </p>
 					</header>
 				</div>
 				<div id="feature_1_img" class="col-md-6 right image-right transparent">
-					<img src="http://placehold.it/500x300">
+					<img src="/images/designer-colors.png">
 				</div>
 			</div>
 		</div>
 	</section>
 	<section class="section black-white section-normal has-top">
-		<div class="decor-top">
+		<!--<div class="decor-top">
 			<% include top-triangle-angle %>
-		</div>
+		</div>-->
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
@@ -50,8 +50,8 @@
 				<div id="feature_2_img" class="col-md-6 image-left transparent">
 					<img src="http://placehold.it/500x300">
 				</div>
-				<div id="feature_2_text" class="col-md-6 right transparent">
-					<header class="small-header text-right">
+				<div id="feature_2_text" class="col-md-4 right transparent">
+					<header class="small-header text-left">
 						<h1 class="headline text-small hairline">Fit To Powerpoint &#38; Legal</h1>
 						<p class="body-subheader">Choose what aspect ratio and resolution you require for that upcoming presentation. Then download your roadmap in either PNG or HTML.</p>
 					</header>
@@ -67,7 +67,7 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div id="feature_3_text" class="col-md-6 transparent">
+				<div id="feature_3_text" class="col-md-4 transparent">
 					<header class="small-header text-left">
 						<h1 class="headline text-small hairline">Share Your Roadmap As A URL</h1>
 						<p class="body-subheader">Share a roadmap view as URL so that your stakeholders can stay up to date and drill down on information relavent to them.</p>
@@ -80,18 +80,18 @@
 		</div>
 	</section>
 	<section class="section black-white section-normal has-top">
-		<div class="decor-top">
+		<!--<div class="decor-top">
 			<% include top-triangle-angle %>
-		</div>
+		</div>-->
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div id="feature_4_img" class="col-md-6 image-left transparent">
-					<img src="http://placehold.it/500x300">
+					<img src="/images/unlimited-views.png">
 				</div>
-				<div id="feature_4_text" class="col-md-6 right transparent">
-					<header class="small-header text-right">
+				<div id="feature_4_text" class="col-md-4 right transparent">
+					<header class="small-header text-left">
 						<h1 class="headline text-small hairline">One Data Set, Unlimited Views</h1>
 						<p class="body-subheader">From a single set of data, create multiple roadmap views to be shared with different audiences</p>
 					</header>
@@ -107,7 +107,7 @@
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div id="feature_5_text" class="col-md-6 transparent">
+				<div id="feature_5_text" class="col-md-4 transparent">
 					<header class="small-header text-left">
 						<h1 class="headline text-small hairline">Share Your Roadmap As A URL</h1>
 						<p class="body-subheader">Share roadmap views with a simple URL so that...add and prioritize items, organize headers, and pivot data by custom fields.</p>
@@ -120,18 +120,18 @@
 		</div>
 	</section>
 	<section class="section black-white section-normal has-top">
-		<div class="decor-top">
+		<!--<div class="decor-top">
 			<% include top-triangle-angle %>
-		</div>
+		</div>-->
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div id="feature_6_img" class="col-md-6 image-left transparent">
-					<img src="http://placehold.it/500x300">
+					<img src="/images/table.png">
 				</div>
-				<div id="feature_6_text" class="col-md-6 right transparent">
-					<header class="small-header text-right">
+				<div id="feature_6_text" class="col-md-4 right transparent">
+					<header class="small-header text-left">
 						<h1 class="headline text-small hairline">Manage Your Table Of Data</h1>
 						<p class="body-subheader">Create, import and organize your roadmap items in a sleek table view. Add custom columns, manipulate data, all in the cloud</p>
 					</header>
