--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 	<div class="container">
 		<header class="section-header text-center underline">
 			<h1 class="headline text-large hairline">Create Beautiful Roadmaps Quickly</h1>
-			<p>Start building insightful visualizations for your audience.</p>
+			<p class="get-smaller">Start building insightful visualizations for your audience.</p>
 		</header>
 		<div class="row">
 			<div class="col-lg-12 med-margin-bottom">
@@ -53,50 +53,33 @@
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
-		<div class="container">
+		<div class="container features">
 			<header class="section-header small text-center underline">
 				<h1 class="headline text-large hairline xsmall-margin-bottom">Features</h1>
 			</header>
 			<div class="row med-margin-bottom">
 				<div class="col-md-12 text-default">
 					<ul class="list-unstyled row image-list">
-						<li class="col-md-12 small-margin-top">
-							<div class="col-md-4">
-								<img src="/images/icon-briefcase-full.png" width="300" height="300">
-							</div>
-							<div class="col-md-8">
-								<h3 class="text-center font-normal">Idea Management</h3>
-								<p>Import, create and priortize items in a slick UI.</p>
-							</div>
+						<li class="col-md-3 small-margin-top">
+						<!-- a that goes to feature -->
+							<img src="/images/icon-briefcase-full.png" width="295" height="295">
+							<h3 class="text-center font-normal">Idea Management</h3>
+							<p>Import, create and priortize items in a slick UI.</p>
 						</li>
-						<li class="col-md-12 small-margin-top">
-							<div class="col-md-8">
-								<h3 class="text-center font-normal">Custom Roadmap Views</h3>
-								<p>Single click creation and powerful drag and drop tools.</p>
-							</div>
-							<div class="col-md-4">
-								<img src="/images/icon-camera.png" width="300" height="300">
-							</div>
+						<li class="col-md-3 small-margin-top">
+							<img src="/images/icon-camera.png" width="295" height="295">
+							<h3 class="text-center font-normal">Custom Roadmap Views</h3>
+							<p>Single click creation and powerful drag and drop tools.</p>
 						</li>
-						<li class="col-md-12 small-margin-top">
-							<!-- roadmap1 is better proportioned but 2 looks better? -->
-							<div class="col-md-4">
-								<img src="/images/icon-apple.png" width="300" height="300">
-							</div>
-							<div class="col-md-8">
-								<h3 class="text-center font-normal">Color Palettes &#38; Branding</h3>
-								<p>Create the deep impact on your audience.</p>
-							</div>
+						<li class="col-md-3 small-margin-top">
+							<img src="/images/icon-apple.png" width="295" height="295">
+							<h3 class="text-center font-normal">Color Palettes &#38; Branding</h3>
+							<p>Create the deep impact on your audience.</p>
 						</li>
-						<li class="col-md-12 small-margin-top">
-							<!-- roadmap1 is better proportioned but 2 looks better? -->
-							<div class="col-md-8">
-								<h3 class="text-center font-normal">Fit to Powerpoint</h3>
-								<p>Stop moving pixels arounds a slide. Export directly to Powerpoint.</p>
-							</div>
-							<div class="col-md-4">
-								<img src="/images/icon-disk.png" width="300" height="300">
-							</div>
+						<li class="col-md-3 small-margin-top">
+							<img src="/images/icon-disk.png" width="295" height="295">
+							<h3 class="text-center font-normal">Fit to Powerpoint</h3>
+							<p>Stop moving pixels arounds a slide. Export directly to Powerpoint.</p>
 						</li>
 					</ul>
 				</div>
@@ -109,30 +92,63 @@
 		</div>
 		<div class="background-media"></div>
 		<div class="background-overlay"></div>
-		<div class="container">
-			<header class="small-header text-center">
-				<h1 class="headline text-medium hairline med-margin-bottom">Roadmaps Of All Types</h1>
+		<div class="container-fluid">
+			<header class="section-header text-center underline med-margin-bottom">
+				<h1 class="headline text-medium hairline xsmall-margin-bottom">Roadmaps Of All Types</h1>
 			</header>
 			<div class="row">
-				<div class="col-md-12">
-					<ul class="list-unstyled row image-list">
-						<li class="col-md-4">
-							<img src="http://placehold.it/320x200">
-							<h3>Sprint&#47;Feature Roadmap</h3>
-						</li>
-						<li class="col-md-4">
-							<img src="http://placehold.it/320x200">
-							<h3>Project Roadmap</h3>
-						</li>
-						<li class="col-md-4">
-							<img src="http://placehold.it/320x200">
-							<h3>Release Roadmap</h3>
-						</li>
-					</ul>
+				<div class="col-md-10 center">
+					<div class="col-md-8">
+						<div class="browser">
+							<!--<img class="bg" src="/images/browser.jpg">-->
+							<img class="bg" src="/images/browser-roadmunk.jpg">
+							<!--<p class="url">https://app.roadmunk.com</p>-->
+							<img id="sprintImg" class="screen selected-img" src="/images/sprint-roadmap.png">
+							<img id="productImg" class="screen" src="/images/product-roadmap.png">
+							<img id="releaseImg" class="screen" src="/images/release-roadmap.png">
+						</div>
+					</div>
+					<div class="col-md-4">
+						<ul class="list-unstyled feature-controls">
+							<li id="sprint" class="selected">
+								<span >
+									<div class="roadmap-icon sprint">
+										<span class="glyphicon glyphicon-flash"></span>
+									</div>
+									<span class="info">
+										<h3>Sprint Roadmap</h3>
+										<p>Create your short term roadmap to visualize your upcoming sprints</p>
+									</span>
+								</a>
+							</li>
+							<li id="product">
+								<span>
+									<div class="roadmap-icon product">
+										<span class="glyphicon glyphicon-briefcase"></span>
+									</div>
+									<span class="info">
+										<h3>Product Roadmap</h3>
+										<p>Provide vital status updates to your stakeholders</p>
+									</span>
+								</a>
+							</li>
+							<li id="release">
+								<span>
+									<div class="roadmap-icon release">
+										<span class="glyphicon glyphicon-globe"></span>
+									</div>
+									<span class="info">
+										<h3>Release Roadmap</h3>
+										<p>Plan out your long term releases across multiple product lines</p>
+									</span>
+								</span>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-12 small-margin-top small-margin-bottom">
+				<div class="col-md-10 small-margin-top small-margin-bottom center">
 					<a href="https://app.roadmunk.com/login/#/signup">
 						<div class="cta center"></div>
 					</a>
@@ -239,7 +255,7 @@
 		<div class="container">
 			<header class="section-header text-center underline">
 				<h1 class="headline text-medium hairline">See Roadmunk In Action</h1>
-				<p>Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
+				<p class="get-smaller">Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
 			</header>
 			<div class="row">
 				<div class="col-lg-12">
